Adjust heading size for smaller devices to prevent horizontal overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 main {
@@ -21,6 +21,7 @@ main {
 
 h1 {
   font-family: 'Libre Baskerville', serif;
+  font-size: 1.4em;
   color: #333;
   margin-top: 0;
 }
@@ -70,17 +71,27 @@ a:hover {
   }
 }
 
+@media (min-width: 370px) {
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
 @media (min-width: 768px) {
+  body {
+    font-size: 20px;
+  }
+
   main {
     padding: 0 2em;
   }
 
-  body {
-    font-size: 18px;
-  }
-
   .inner {
     padding: 3em;
+  }
+
+  h1 {
+    font-size: 2em;
   }
 }
 
